# staket

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  conf_test_db.py  docker-compose.yml  helpers.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/actions/prepare-environment/: action.yml
.github/workflows/: deployment.yml  gh-codeql-analysis.yml  pre-commit-auto-update.yml  test-and-codestyle.yml
app/: constants.py  db.py  main.py  requirements-dev.txt  requirements.txt  settings.py
app/.deta/: prog_info  state
app/models/: __init__.py  cart.py  category.py  order.py  product.py  user.py
app/routers/: cart.py  category.py  order.py  product.py  user.py
migrations/: env.py
migrations/versions/: 3701fd619c16_added_is_active_field_to_user_model.py  798540c2eae1_init_alembic.py
tests/: conftest.py  test_main.py
tests/routers/: test_cart_items.py  test_category.py  test_orders.py  test_product.py  test_user.py
