[metadata]
name = staket
version = file: staket/_version.txt
author = Tugrul Can Söllü
author_email = tugrulcansollu@gmail.com
url = https://github.com/tugrulcan/staket
description = Playground for the Staket project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
keywords = FastAPI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/tugrulcan/staket/issues
    Changelog = https://github.com/tugrulcan/staket/blob/master/CHANGELOG.md

[options.package_data]
staket = py.typed, _version.txt, *.pyi

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[coverage:run]
omit = []

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
exclude =  .tox, .git, .eggs, __pycache__, tests/, docs/, build/, dist/
doctests = True
enable_extensions = T001
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore=W503, B008, B902
# per-file-ignores =
max-line-length = 79
extend-ignore = E203


[mypy]
disallow_untyped_defs = True
disallow_any_unimported = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
warn_unused_ignores = True
show_error_codes = True
disallow_any_generics = True
disallow_subclassing_any = False
disallow_untyped_calls = True
# plugins = sqlmypy


[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts =
    -ra
    --strict-markers
    -p pytester


[tool:isort]
profile = black
force_single_line = True
line_length = 79
known_first_party = pytest_cov
default_section = THIRDPARTY
forced_separate = test_pytest_cov
skip = .tox,.eggs,ci/templates,build,dist
lines_between_types = 1
combine_as_imports = true
